[package]
name = "img-compresor"
version = "0.1.0"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.2"
futures = "0.3.1"
actix-web = "2.0"
actix-rt = "1.0"
actix-multipart = "0.2.0"
